# respeaker_ros

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
respeaker/: respeaker_node.py
respeaker_ros/: audio.py  interface.py  respeaker_node.py
respeaker_ros/config/: 40-respeaker.rules
